gruppo_d/force-app/main/default/objects/Luogo__c/Luogo__c.object-meta.xml
<CustomObject>
    <label>Luogo</label>
    <nameField>
        <label>Nome Luogo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Luoghi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>