gruppo_d/force-app/main/default/objects/Luogo__c/fields/Capacita__c.field-meta.xml
<CustomField>
    <fullName>Capacita__c</fullName>
    <label>Capacità</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>