gruppo_d/force-app/main/default/objects/Luogo__c/fields/Citta__c.field-meta.xml
<CustomField>
    <fullName>Citta__c</fullName>
    <label>Città</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>