gruppo_d/force-app/main/default/objects/Luogo__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>